fix page not resizing on mobile, edit navbar-brand text

--- a/client/css/mythrilco.styl
+++ b/client/css/mythrilco.styl
@@ -28,6 +28,10 @@ body
 
 nav
   color: color-dark;
+  .navbar-brand
+    font-family: lato;
+    font-weight: 400;
+    font-size: 1.2em;
 
   &.navbar
     background: color-light;
